Bug 268829 - Modifying a saved filter does not work
Summary: Modifying a saved filter does not work
Status: RESOLVED FIXED
Alias: None
Product: tellico
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.3.2
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Robby Stephenson
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-03-18 16:41 UTC by kexxxi
Modified: 2011-03-20 01:04 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description kexxxi 2011-03-18 16:41:56 UTC
Version:           2.3.2 (using KDE 4.5.5) 
OS:                Linux

Tellico ignores the modifications when the user tries to modify a saved filter.

Reproducible: Always

Steps to Reproduce:
1) Make and save an advanced filter as described in the Tellico handbook:
"Filters may be saved, so that all entries which match are grouped together in the Filter View. To save the filter, enter a name in the text box, and click the Save Filter button."

2) Try to modify the filter:
"Previously saved filters may be modified by right-clicking on the filter item in the Filter View and selecting Modify Filter. The Advanced Filter Dialog is opened, and changes may be made to the filter's name or rules."


Actual Results:  
Tellico ignores changes made by user.

Expected Results:  
Tellico should apply and save the changes the user made.
Comment 1 Robby Stephenson 2011-03-20 01:04:27 UTC
SVN commit 1225330 by rstephenson:

Make sure to save edits to modified filters.

BUG:268829


 M  +4 -0      ChangeLog  
 M  +2 -2      src/commands/filtercommand.cpp  
 M  +0 -15     src/filterview.cpp  
 M  +1 -0      src/tellico_kernel.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1225330