Make sure to save edits to modified filters.

BUG:268829

svn path=/trunk/extragear/office/tellico/; revision=1225330